--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -11,6 +11,62 @@
 }
 
 
+/* left site */
+
+.hero-left {
+    gap: 3rem;
+}
+
+.hero-title {
+    position: relative;
+    z-index: 1;
+}
+
+.hero-title>h1 {
+    font-weight: 600;
+    font-size: 3.8rem;
+    line-height: 4rem;
+}
+
+.orange-circle {
+    height: 4rem;
+    width: 4rem;
+    background: var(--orange-gradient);
+    position: absolute;
+    border-radius: 999px;
+    right: 28%;
+    top: -10%;
+    z-index: -1;
+}
+
+.search-bar>input {
+    border: none;
+    outline: none;
+}
+
+.search-bar {
+    background-color: white;
+    border-radius: 5px;
+    border: 3px solid rgba(120, 120, 120, 0.374);
+    padding: 0.5rem 1rem;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.stats {
+    width: 100%;
+    justify-content: space-between;
+}
+
+.stat>:nth-child(1) {
+    font-size: rem;
+}
+
+.stat>:nth-child(1)>:last-child {
+    color: orange;
+}
+
+
 /* right site */
 
 .image-container {
