--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -2,7 +2,6 @@
     color: white;
     position: relative;
     padding-bottom: 2rem;
-    background-color: var(--black);
 }
 
 .hero-container {
@@ -59,7 +58,7 @@
 }
 
 .stat>:nth-child(1) {
-    font-size: rem;
+    font-size: 2rem;
 }
 
 .stat>:nth-child(1)>:last-child {
